--- a/contato.html
+++ b/contato.html
@@ -27,34 +27,54 @@
         <main>
             <form action="">
                 <label for="nomeSobrenome">Nome e Sobrenome</label>
-                <input type="text" id="nomeSobrenome">
+                <input type="text" id="nomeSobrenome" class="input-padrao">
 
-                <label for="email">Nome e Sobrenome</label>
-                <input type="email" id="email">
+                <label for="email">E-mail</label>
+                <input type="email" id="email" class="input-padrao">
 
                 <label for="telefone">Telefone</label>
-                <input type="text" id="telefone">
+                <input type="text" id="telefone" class="input-padrao">
+
+
+                <label for="mensagem"></label>
+                <textarea name="" id="mensagem" cols="30" rows="10"  class="input-padrao">
+                </textarea>
+
+                <!-- Radio -->
+                <div>
+                    <p>Como prefere nosso contato?</p>
+                    <label for="radio-email">
+                        <input type="radio" name="contato" value="email" id="radio-email">
+                        E-mail
+                    </label>
+                    <label for="radio-telefone">
+                        <input type="radio" name="contato" value="telefone" id="radio-telefone">
+                        Telefone
+                    </label>
+                    <label for="radio-whatsapp">
+                        <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
+                        Whatsapp
+                    </label>
+                </div>
+
+                <!-- Select -->
+                <div>
+                <p>Qual horário prefere ser atendido?</p>
+                    <select name="" id="">
+                        <option value="">Manhã</option>
+                        <option value="">Tarde</option>
+                        <option value="">Noite</option>
+                    </select>
+                </div>
+
+                <!-- Checkbox -->
+                <label for="">
+                    <input type="checkbox" class="checkbox">
+                    Gostaria de receber as novidades por e-mail?
+                </label>
 
                 <input type="submit" value="Enviar formulário">
 
-                <label for="mensagem"></label>
-                <textarea name="" id="mensagem" cols="30" rows="10">
-                </textarea>
-
-                <div>
-                    <p>Como prefere nosso contato?</p>
-                    <label for="radio-email">E-mail</label>
-                    <input type="radio" name="contato" value="email" id="radio-email">
-                    <label for="radio-telefone">Telefone</label>
-                    <input type="radio" name="contato" value="telefone" id="radio-telefone">
-                    <label for="radio-whatsapp">Whatsapp</label>
-                    <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
-                </div>
-
-                <label for="">
-                    <input type="checkbox">
-                    Gostaria de receber as novidades por e-mail?
-                </label>
             </form>            
         </main>
 
