--- a/contato.html
+++ b/contato.html
@@ -27,22 +27,22 @@
         <main>
             <form action="">
                 <label for="nomeSobrenome">Nome e Sobrenome</label>
-                <input type="text" id="nomeSobrenome" class="input-padrao">
+                <input type="text" id="nomeSobrenome" class="input-padrao" required>
 
                 <label for="email">E-mail</label>
-                <input type="email" id="email" class="input-padrao">
+                <input type="email" id="email" class="input-padrao" required>
 
                 <label for="telefone">Telefone</label>
-                <input type="text" id="telefone" class="input-padrao">
+                <input type="tel" id="telefone" class="input-padrao" required>
 
 
                 <label for="mensagem"></label>
-                <textarea name="" id="mensagem" cols="30" rows="10"  class="input-padrao">
+                <textarea name="" id="mensagem" cols="30" rows="10"  class="input-padrao" required>
                 </textarea>
 
                 <!-- Radio -->
-                <div>
-                    <p>Como prefere nosso contato?</p>
+                <fieldset>
+                    <legend>Como prefere nosso contato?</legend>
                     <label for="radio-email">
                         <input type="radio" name="contato" value="email" id="radio-email">
                         E-mail
@@ -52,30 +52,54 @@
                         Telefone
                     </label>
                     <label for="radio-whatsapp">
-                        <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
+                        <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked>
                         Whatsapp
                     </label>
-                </div>
+                </fieldset>
 
                 <!-- Select -->
-                <div>
-                <p>Qual horário prefere ser atendido?</p>
+                <fieldset>
+                <legend>Qual horário prefere ser atendido?</legend>
                     <select name="" id="">
                         <option value="">Manhã</option>
                         <option value="">Tarde</option>
                         <option value="">Noite</option>
                     </select>
-                </div>
+                </fieldset>
 
                 <!-- Checkbox -->
                 <label for="">
-                    <input type="checkbox" class="checkbox">
+                    <input type="checkbox" class="checkbox" checked>
                     Gostaria de receber as novidades por e-mail?
                 </label>
 
-                <input type="submit" value="Enviar formulário">
+                <input type="submit" class="enviar" value="Enviar formulário">
 
-            </form>            
+            </form>     
+            
+            <table>
+            <thead>
+                <tr>
+                    <th>Dia</th>
+                    <th>Horário</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Segunda</td>
+                    <td>8h ~ 20hs</td>
+                </tr>
+                <tr>
+                    <td>Quarta</td>
+                    <td>8h ~ 20hs</td>
+                </tr>
+                <tr>
+                    <td>Sexta</td>
+                    <td>8h ~ 20hs</td>
+                </tr>
+            </tbody>
+            </table>
+
         </main>
 
         <footer>
