--- a/index.html
+++ b/index.html
@@ -3,35 +3,74 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Barbearia robot_exe</title>
-		<link rel="stylesheet" href="style-home.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet"> 
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Barbearia Alura</h1>
-		</header>
-		<img id="banner" src="banner.jpg">
-		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
-	 
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+            <div class="caixa">
+                <h1><img src="./images/logo.png" alt="logo da barbearia"></h1>
+                <!-- Navegacao -->
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-		</div>
+		<img class="banner" src="banner.jpg">
 
-		<div class="beneficios">
-			<h3 class="titulo-centralizado">Benefícios</h3>
+		<main>
+			<section class="principal">
 
-			<ul>
-				<li class="itens">Atendimento aos Clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais Qualificados</li>
-			</ul>
+				<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+				<div class="caixa">
+					<img src="./images/utensilios.jpg" class="utensilios" alt="Utensilios de um barbeiro">
 
-			<img src="beneficios.jpg" class="imagembeneficios">
-		</div>
+					<div class="container">
+						<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+						<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+						<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+					</div>
+			    </div>
+
+			</section>
+
+
+			<section class="mapa">
+				<h3 class="titulo-principal">No estabelecimento</h3>
+				<p>Nosso estabelecimento está localizado aqui</p>
+
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58516.062962779026!2d-46.69215366683307!3d-23.559321678896843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59541c6c79c3%3A0x36b90a85f0f8cb33!2sGrupo%20Alura!5e0!3m2!1spt-BR!2sbr!4v1642771772733!5m2!1spt-BR!2sbr" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+			</section>
+
+			<section class="beneficios">
+				<h3 class="titulo-principal">Benefícios</h3>
+
+				<ul>
+					<li class="itens">Atendimento aos Clientes</li>
+					<li class="itens">Espaço diferenciado</li>
+					<li class="itens">Localização</li>
+					<li class="itens">Profissionais Qualificados</li>
+				</ul>
+
+				<img src="beneficios.jpg" class="imagembeneficios">
+			</section>
+		</main>
+
+		<!-- Footer -->
+		<footer>
+            <img src="./images/logo-branco.png" alt="foto de fundo">
+            <p class="copyright">&copy; Copyright Barbearia robot_exe 2022</p>
+        </footer>
 	</body>
 </html>
